chore: env example setting

--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,6 @@ S3_BUCKET=somshare-pdf-bucket
 # ===============================
 # Database (PostgreSQL)
 # ===============================
-DB_URL=jdbc:postgresql://localhost:5432/somshare
-DB_USERNAME=somshare_user
+DB_URL=jdbc:postgresql://localhost:5432/proovy
+DB_USERNAME=proovy_user
 DB_PASSWORD=your_password_here
