--- a/.env.example
+++ b/.env.example
@@ -3,24 +3,15 @@
 # ===============================
 AWS_REGION=ap-northeast-2
 
-
-# ===============================
-# AWS SES (이메일 전송)
-# ===============================
-# IAM 사용자의 SES 전용 Access Key
-AWS_SES_ACCESS_KEY=AKIA여기에_SES용_Access_Key_입력
-AWS_SES_SECRET_KEY=여기에_SES용_Secret_Key_입력
-# SES에서 인증된 발신 이메일 주소
-SES_FROM_EMAIL=your-verified-email@gmail.com
-
 # ===============================
 # AWS S3 (PDF 저장)
 # ===============================
 # IAM 사용자의 S3 전용 Access Key
-AWS_S3_ACCESS_KEY=AKIA여기에_S3용_Access_Key_입력
-AWS_S3_SECRET_KEY=여기에_S3용_Secret_Key_입력
+AWS_S3_ACCESS_KEY=
+AWS_S3_SECRET_KEY=
+
 # S3 버킷 이름
-S3_BUCKET=somshare-pdf-bucket
+S3_BUCKET=
 
 # ===============================
 # Database (PostgreSQL)
@@ -28,3 +19,11 @@ S3_BUCKET=somshare-pdf-bucket
 DB_URL=jdbc:postgresql://localhost:5432/proovy
 DB_USERNAME=proovy_user
 DB_PASSWORD=your_password_here
+
+# ===============================
+# Redis (세션 / 캐시 / 토큰)
+# ===============================
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=your_password_here
+REDIS_DATABASE=0
