--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -54,6 +54,31 @@ cloud:
       bucket: ${AWS_S3_BUCKET:proovy-assets-dev}
     stack:
       auto: false  # CloudFormation 스택 생성 비활성화
+
+# ===============================
+# 카카오 OAuth 설정
+# ===============================
+oauth:
+  kakao:
+    client-id: ${KAKAO_CLIENT_ID}           # REST API 키
+    client-secret: ${KAKAO_CLIENT_SECRET}   # Client Secret (선택)
+    # 카카오 API 엔드포인트
+    auth-url: https://kauth.kakao.com
+    api-url: https://kapi.kakao.com
+    # 개별 엔드포인트
+    token-uri: https://kauth.kakao.com/oauth/token
+    user-info-uri: https://kapi.kakao.com/v2/user/me
+    token-info-uri: https://kapi.kakao.com/v1/user/access_token_info
+
+# ===============================
+# JWT 설정 (서비스 자체 토큰)
+# ===============================
+jwt:
+  secret: ${JWT_SECRET}                    # 최소 256bit (32자 이상)
+  access-token-expiration: 3600            # 1시간 (초)
+  refresh-token-expiration: 604800         # 7일 (초)
+  signup-token-expiration: 600             # 10분 (초)
+
 ---
 # ===============================
 # Local 환경
