--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,9 +1,9 @@
 spring:
-  profiles:
-    active: local
-
   application:
     name: proovy-api
+
+  profiles:
+    active: local
 
   datasource:
     url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:proovy}
@@ -12,13 +12,6 @@ spring:
     driver-class-name: org.postgresql.Driver
 
   jpa:
-    hibernate:
-      ddl-auto: validate
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
-        dialect: org.hibernate.dialect.PostgreSQLDialect
     open-in-view: false
 
   data:
@@ -26,19 +19,13 @@ spring:
       host: ${REDIS_HOST:localhost}
       port: ${REDIS_PORT:6379}
 
+springdoc:
+  swagger-ui:
+    operationsSorter: alpha
+    tagsSorter: alpha
+
 server:
   port: 8080
-
-springdoc:
-  api-docs:
-    path: /api-docs
-  swagger-ui:
-    path: /swagger-ui.html
-    tags-sorter: alpha
-    operations-sorter: alpha
-  default-consumes-media-type: application/json
-  default-produces-media-type: application/json
-
 
 # ===============================
 # AWS 설정
@@ -60,8 +47,9 @@ cloud:
 # ===============================
 oauth:
   kakao:
-    client-id: ${KAKAO_CLIENT_ID}           # REST API 키
-    client-secret: ${KAKAO_CLIENT_SECRET}   # Client Secret (선택)
+    client-id: ${KAKAO_CLIENT_ID}
+    client-secret: ${KAKAO_CLIENT_SECRET}
+    redirect-uri: ${KAKAO_REDIRECT_URI:http://localhost:3000/oauth/kakao/callback}
     # 카카오 API 엔드포인트
     auth-url: https://kauth.kakao.com
     api-url: https://kapi.kakao.com
@@ -87,10 +75,14 @@ spring:
   config:
     activate:
       on-profile: local
+
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
 
 ---
 # ===============================
@@ -100,6 +92,7 @@ spring:
   config:
     activate:
       on-profile: prod
+
   jpa:
     hibernate:
       ddl-auto: validate
