--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -43,7 +43,7 @@ cloud:
       auto: false  # CloudFormation 스택 생성 비활성화
 
 # ===============================
-# 카카오 OAuth 설정
+# OAuth 설정
 # ===============================
 oauth:
   kakao:
@@ -57,6 +57,14 @@ oauth:
     token-uri: https://kauth.kakao.com/oauth/token
     user-info-uri: https://kapi.kakao.com/v2/user/me
     token-info-uri: https://kapi.kakao.com/v1/user/access_token_info
+
+  naver:
+    client-id: ${NAVER_CLIENT_ID}
+    client-secret: ${NAVER_CLIENT_SECRET}
+    redirect-uri: ${NAVER_REDIRECT_URI:http://localhost:3000/oauth/naver/callback}
+    # 네이버 API 엔드포인트
+    token-uri: https://nid.naver.com/oauth2.0/token
+    user-info-uri: https://openapi.naver.com/v1/nid/me
 
 # ===============================
 # JWT 설정 (서비스 자체 토큰)
