--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -61,10 +61,14 @@ oauth:
   naver:
     client-id: ${NAVER_CLIENT_ID}
     client-secret: ${NAVER_CLIENT_SECRET}
+    # redirectUri는 서버에서 고정 (보안상 Request Body에서 받지 않음)
     redirect-uri: ${NAVER_REDIRECT_URI:http://localhost:3000/oauth/naver/callback}
     # 네이버 API 엔드포인트
+    authorize-uri: https://nid.naver.com/oauth2.0/authorize
     token-uri: https://nid.naver.com/oauth2.0/token
     user-info-uri: https://openapi.naver.com/v1/nid/me
+    # state 유효 시간 (초)
+    state-ttl: 300
 
 # ===============================
 # JWT 설정 (서비스 자체 토큰)
