feat: google로그인 환경설정

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -70,6 +70,13 @@ oauth:
     # state 유효 시간 (초)
     state-ttl: 300
 
+  google:
+    client-id: ${GOOGLE_CLIENT_ID}
+    client-secret: ${GOOGLE_CLIENT_SECRET}
+    # 구글 API 엔드포인트
+    token-uri: https://oauth2.googleapis.com/token
+    user-info-uri: https://www.googleapis.com/oauth2/v2/userinfo
+
 # ===============================
 # JWT 설정 (서비스 자체 토큰)
 # ===============================
