refactor: google redirect-uri 고정 방식으로 변경

--- a/.env.example
+++ b/.env.example
@@ -16,14 +16,42 @@ S3_BUCKET=
 # ===============================
 # Database (PostgreSQL)
 # ===============================
-DB_URL=jdbc:postgresql://localhost:5432/proovy
-DB_USERNAME=proovy_user
-DB_PASSWORD=your_password_here
+DB_HOST=
+DB_PORT=
+DB_NAME=
+DB_USERNAME=
+DB_PASSWORD=
 
 # ===============================
 # Redis (세션 / 캐시 / 토큰)
 # ===============================
-REDIS_HOST=localhost
-REDIS_PORT=6379
-REDIS_PASSWORD=your_password_here
-REDIS_DATABASE=0
+REDIS_HOST=
+REDIS_PORT=
+REDIS_PASSWORD=
+REDIS_DATABASE=
+
+# ===============================
+# KAKAO Login
+# ===============================
+KAKAO_CLIENT_ID=
+KAKAO_CLIENT_SECRET=
+KAKAO_REDIRECT_URI=
+
+# ===============================
+# NAVER Login
+# ===============================
+NAVER_CLIENT_ID=
+NAVER_CLIENT_SECRET=
+NAVER_REDIRECT_URI=
+
+# ===============================
+# GOOGLE Login
+# ===============================
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URI=
+
+# ===============================
+# JWT Secret
+# ===============================
+JWT_SECRET=
